Update CLAUDE.md.