@@ -2,41 +2,59 @@
 
 This file provides guidance to Claude Code (claude.ai/code) when working with code in this repository.
 
-## Project Overview
-
-A Sudoku solver using Donald Knuth's Dancing Links (DLX) algorithm to solve the exact cover problem. Requires JavaFX for the graphical interface.
-
-## Build and Run
-
-This is a JavaFX application. Compile and run with:
+## Build & Test Commands
 
 ```bash
-# Compile (ensure JavaFX is in classpath)
-javac --module-path $PATH_TO_JAVAFX/lib --add-modules javafx.controls src/SudokuSolver/*.java
-
-# Run
-java --module-path $PATH_TO_JAVAFX/lib --add-modules javafx.controls -cp src SudokuSolver.Main
+bun test              # Run all tests
+bun test --watch      # Run tests in watch mode
+bun run typecheck     # TypeScript type checking (strict mode)
+bun run build         # Build for browser (outputs to dist/)
+bun run dev           # Start dev server with hot reload
 ```
 
-The application expects `ExactCoverMatrix.txt` to be in the working directory.
+To run a single test file:
+```bash
+bun test tests/DancingLinks.test.ts
+```
 
 ## Architecture
 
-### Algorithm Flow
+This is a browser-based Sudoku solver using Donald Knuth's Dancing Links (DLX) algorithm to solve the exact cover problem.
 
-1. **ExactCoverMatrix** loads a pre-computed sparse matrix from `ExactCoverMatrix.txt` representing all 324 constraints (81 cell, 81 row-number, 81 column-number, 81 box-number constraints) and 729 possible assignments (9 values × 81 cells)
+### Core Algorithm (src/)
 
-2. **DancingLinks** implements Algorithm X using the dancing links technique:
-   - `search()` - recursive backtracking that covers/uncovers columns
-   - `coverColumn()`/`uncoverColumn()` - temporarily remove/restore matrix sections
-   - `chooseSmallestColumn()` - S-heuristic to minimize branching factor
-   - `setAssignment()` - pre-fills known values by removing conflicting rows
+**Dancing Links Data Structure:**
+- `MatrixNode` - Base node with bidirectional links (up/down/left/right) that can detach and reattach from the matrix in O(1)
+- `ColumnHeaderNode` - Extends MatrixNode, tracks column name and size for the MRV heuristic
 
-3. **MatrixNode**/**ColumnHeaderNode** - doubly-linked list nodes forming the sparse matrix structure with `detachColumn()`/`reattachColumn()` for O(1) removal/restoration
+**Exact Cover Matrix (`ExactCoverMatrix`):**
+- Constructs a 729×324 sparse matrix representing Sudoku as an exact cover problem
+- 729 rows: each possible (row, col, value) assignment
+- 324 columns representing 4 constraint types:
+  - Cell constraints (81): each cell has exactly one value
+  - Row constraints (81): each row has each digit 1-9 exactly once
+  - Column constraints (81): each column has each digit 1-9 exactly once
+  - Box constraints (81): each 3×3 box has each digit 1-9 exactly once
 
-### MVC Structure
+**DLX Solver (`DancingLinks`):**
+- `search()` - Recursive backtracking with covering/uncovering
+- `chooseSmallestColumn()` - MRV (minimum remaining values) heuristic
+- `setAssignment()` - Pre-fills known values by removing conflicting rows
+- `clearAssignments()` - Restores matrix for reuse
 
-- **Main** - JavaFX Application entry point
-- **View** - 9×9 grid of TextFields grouped into 3×3 unit boxes
-- **Controller** - wires solve/reset button actions, reads cell values, invokes DLX solver
-- **InputFormatter** - restricts input to single digits 1-9
+### UI Layer (src/)
+
+- `View` - DOM-based 9×9 grid with input validation
+- `Controller` - Coordinates View and DancingLinks solver
+- `InputFormatter` - Restricts input to digits 1-9
+- `Main` - Entry point, initializes app
+
+### Constraint Naming Convention
+
+Column headers use string names:
+- `R{row}C{col}` - Cell constraint (e.g., "R0C0")
+- `R{row}#{value}` - Row-number constraint (e.g., "R0#1")
+- `C{col}#{value}` - Column-number constraint (e.g., "C0#1")
+- `B{box}#{value}` - Box-number constraint (e.g., "B0#1")
+
+Box index: `Math.floor(row / 3) * 3 + Math.floor(col / 3)`
